# jaffle_pipeline

./: Dockerfile  README.md  docker-compose.yaml  tutorial.md
config/: airflow.cfg
dags/: dbt_dag.py  s3_to_raw.py
dbt/: dbt_project.yml
dbt/models/analytics/: customers.sql
dbt/models/examples/: my_first_dbt_model.sql
dbt/models/sources/: sources.yml
dbt/models/staging/: stg_customers.sql  stg_orders.sql
jaffle-env/: pyproject.toml
terraform/: .terraform.lock.hcl  provider.tf  sf_file_format.tf  sf_main.tf  sf_user.tf  snowflake.tfplan  terraform.tfstate  terraform.tfstate.backup  variables.tf
